# lidar_poly_repo

lidar_poly/: package.xml  setup.cfg  setup.py
lidar_poly/launch/: lidar_launch.py
lidar_poly/lidar_poly/: determine_lidar_poly.py  provide_pose_list_service.py  provide_vehicle_position.py  transform_broadcast.py
lidar_poly/lidar_poly/from_win/: 3_lidar_route_poly.py  main.py
lidar_poly/lidar_poly/uf_support/: support_functions.py
lidar_poly/rviz/: 230803_rviz_stuff.rviz
lidar_poly/yaml/: 230731_input_Tyndall.yaml  230731_pose_list_Tyndall.yaml
lidar_poly_interfaces/: CMakeLists.txt  package.xml
lidar_poly_interfaces/msg/: VehicleInfo.msg
lidar_poly_interfaces/srv/: PoseList.srv
